2012-10-29  Justin Novosad  <junov@google.com>

        [Chromium] flickering observed when copying 2D canvas to webGL texture
        https://bugs.webkit.org/show_bug.cgi?id=100691

        Reviewed by Stephen White.

        Modified test by adding a canvas draw imediately after webgl texture
        upload in order to exercise graphics context synchronization between
        the webGL and 2D canvas graphics contexts.

        * fast/canvas/webgl/canvas-2d-webgl-texture.html:

2012-10-29  Glenn Adams  <glenn@skynav.com>
       
        [CSSOM] Extraneous whitespace in CSSImportRule.cssText
        https://bugs.webkit.org/show_bug.cgi?id=100657

        Reviewed by Simon Fraser.

        Test (from CSS WG) that checks serializion of CSSImportRule.cssText.

        * http/tests/css/shared-stylesheet-mutation-expected.txt:
        * http/tests/css/shared-stylesheet-mutation-preconstruct-expected.txt:
        Fix expected output to match removal of extraneous space.

        * cssom/cssimportrule-media-expected.txt: Added.
        * cssom/cssimportrule-media.html: Added.
        * cssom/resources/import.css: Added.

2012-10-29  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Adding flaky crash expectations for tests that crash after r132699
        if the accessibility object cache is populated.

        * platform/gtk/TestExpectations:

2012-10-29  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL] Skip fast/xmlhttprequest/xmlhttprequest-recursive-sync-event.html test case
        https://bugs.webkit.org/show_bug.cgi?id=100687

        Unreviewed EFL gardening.

        Skip fast/xmlhttprequest/xmlhttprequest-recursive-sync-event.html test case
        since it is intrinsically flaky and cannot be fixed.

        * platform/efl/TestExpectations:

2012-10-29  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] Flaky security tests
        https://bugs.webkit.org/show_bug.cgi?id=100388
